--- a/EMS/core-bundle/src/Resources/views/job/add.html.twig
+++ b/EMS/core-bundle/src/Resources/views/job/add.html.twig
@@ -1,8 +1,8 @@
 {% extends '@EMSCore/base.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
 
 {% block title %}Create job{% endblock %}
-{% block pagetitle %}Create job{% endblock %} 
-{% block subtitle %}<small>Run a synfony command</small>{% endblock %} 
+{% block pagetitle %}Create job{% endblock %}
+{% block subtitle %}<small>Run a symfony command</small>{% endblock %}
 
 
 {% block body %}
