--- a/EMS/core-bundle/assets/css/component/json_menu_nested.scss
+++ b/EMS/core-bundle/assets/css/component/json_menu_nested.scss
@@ -29,7 +29,7 @@
     .jmn-top {
         display: flex;
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .jmn-wrapper {
