--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
@@ -164,31 +164,26 @@
     {{ action|capitalize }} {{ node.type|capitalize }}
 {%- endblock jmn_modal_title -%}
 
-{%- block jmn_modal_form -%}
-    {{ form_start(form) }}
-    {{ form_widget(form.data) }}
-    {% if form._item_hash is defined %}{{ form_widget(form._item_hash) }}{% endif %}
-    {{ form_end(form) }}
-{%- endblock jmn_modal_form -%}
+{%- block jmn_modal_body -%}
+    {% if action == 'view' %}
+        {{ template.block('jmn_modal_view', _context)|raw }}
+    {% elseif form is defined %}
+        {{ form_start(form) }}
+        {{ form_widget(form.data) }}
+        {% if form._item_hash is defined %}{{ form_widget(form._item_hash) }}{% endif %}
+        {{ form_end(form) }}
+    {% endif %}
+{%- endblock jmn_modal_body -%}
 
-{%- block jmn_modal_footer_form -%}
+{%- block jmn_modal_footer -%}
     <div class="pull-right">
         <button id="ajax-modal-submit" class="btn btn-sm btn-primary"><i class="fa fa-save"></i>&nbsp;Save</button>
         <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
     </div>
-{%- endblock jmn_modal_footer_form -%}
+{%- endblock jmn_modal_footer -%}
 
-{%- block jmn_modal_preview -%}
-    {{ template.block('jmn_preview', _context)|raw }}
-{%- endblock jmn_modal_preview -%}
 
-{%- block jmn_modal_footer_close -%}
-    <div class="pull-right">
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
-    </div>
-{%- endblock jmn_modal_footer_close -%}
-
-{%- block jmn_preview -%}
+{%- block jmn_modal_view -%}
     {%- if dataFields -%}
         {%- import "@EMSCore/macros/data-field-type.html.twig" as macros -%}
         {{ macros.renderDataField(dataFields, rawData, false, []) }}
@@ -198,5 +193,4 @@
         {{- rawData|json_encode(constant('JSON_PRETTY_PRINT')) -}}
     </pre>
     {%- endif -%}
-{%- endblock jmn_preview -%}
-
+{%- endblock jmn_modal_view -%}
